...
            loadingMore = true;
            props.fetchPhotos(props.url, 'recents', false, false, () => (loadingMore = false));
        }
    };

    return (
        <View style={{flex: 1}} testID="photos-screen">
            <InputModal
                visible={modalVisible}
                onPress={() => {
                    if (albumName.length === 0) {
                        Alert.alert("Album name can't be empty");
                    } else {
...
                                    context: 'vault',
                                    cameraUploads: true,
                                }),
                            )
                        }
                        text="Upload"
                        icon={<Icon regular name="upload" size={15} />}
                        testID="upload"
                    />
                </View>
            </View>
            {props.photos.length === 0 ? (
                <EmptyContent
...
